name:          transducers
category:      Control, Enumerator
version:       0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett, Runar Bjarnason, Paul Chuisano
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/transducers/
bug-reports:   http://github.com/ekmett/transducers/issues
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Composable Stream Transducers
description:   Composable Stream Transducers
build-type:    Simple
tested-with:   GHC == 7.4.1
extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  config
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/transducers.git

library
  build-depends: base >= 4.3 && < 5

  exposed-modules: Data.Model

  other-extensions:
    FlexibleInstances
    GADTs
    Rank2Types

  ghc-options: -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: src

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
    base == 4.*,
    directory >= 1.0 && < 1.2,
    doctest >= 0.8 && <= 0.9,
    filepath >= 1.3 && < 1.4
  ghc-options: -Wall -Werror -threaded
  hs-source-dirs: tests
